--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,104 +6,104 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <EditText
-        android:id="@+id/enter_name"
+    <TextView
+        android:id="@+id/tv_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:text="請輸入姓名已開始遊戲"
+        android:textSize="18sp"
+        app:layout_constraintStart_toStartOf="@+id/ed_name"
+        app:layout_constraintTop_toBottomOf="@+id/ed_name" />
+
+    <EditText
+        android:id="@+id/ed_name"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="32dp"
         android:ems="10"
-        android:inputType="textPersonName"
         android:hint="請輸入玩家姓名"
-        tools:layout_editor_absoluteX="16dp"
-        tools:layout_editor_absoluteY="32dp"
+        android:inputType="textPersonName"
+        android:minHeight="48dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="184dp"
-        android:layout_height="32dp"
-        android:text="請輸入姓名已開始遊戲"
-        tools:layout_editor_absoluteX="16dp"
-        tools:layout_editor_absoluteY="61dp"
-        app:layout_constraintStart_toStartOf="@+id/enter_name"
-        app:layout_constraintTop_toBottomOf="@id/enter_name"
-        />
-
-
 
     <RadioGroup
         android:id="@+id/radioGroup"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
         android:orientation="horizontal"
-        app:layout_constraintStart_toStartOf="@id/textView"
-        app:layout_constraintTop_toBottomOf="@id/textView"
-        >
+        app:layout_constraintStart_toStartOf="@+id/tv_text"
+        app:layout_constraintTop_toBottomOf="@+id/tv_text">
+
         <RadioButton
-            android:id="@+id/radioButton7"
+            android:id="@+id/btn_scissor"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:checked="true"
-            android:text="剪刀"/>
+            android:text="剪刀" />
 
         <RadioButton
-            android:id="@+id/radioButton3"
+            android:id="@+id/btn_stone"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="石頭"/>
-
+            android:text="石頭" />
 
         <RadioButton
-            android:id="@+id/radioButton5"
-            android:layout_width="84dp"
+            android:id="@+id/btn_paper"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="布" />
 
     </RadioGroup>
+
     <Button
-        android:id="@+id/button"
+        android:id="@+id/btn_mora"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
         android:text="猜拳"
-        app:layout_constraintStart_toStartOf="@id/radioGroup"
-        app:layout_constraintTop_toBottomOf="@id/radioGroup"
-        />
+        app:layout_constraintStart_toStartOf="@+id/radioGroup"
+        app:layout_constraintTop_toBottomOf="@+id/radioGroup"/>
 
     <TextView
-        android:id="@+id/textView2"
+        android:id="@+id/tv_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="32dp"
         android:text="名字"
-        app:layout_constraintStart_toStartOf="@id/button"
-        app:layout_constraintTop_toBottomOf="@id/button" />
+        app:layout_constraintStart_toStartOf="@+id/btn_mora"
+        app:layout_constraintTop_toBottomOf="@+id/btn_mora"/>
 
     <TextView
-        android:id="@+id/textView3"
+        android:id="@+id/tv_winner"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="24dp"
         android:text="勝利者"
-        app:layout_constraintStart_toEndOf="@id/textView2"
-        app:layout_constraintTop_toTopOf="@id/textView2" />
+        app:layout_constraintStart_toEndOf="@+id/tv_name"
+        app:layout_constraintTop_toTopOf="@+id/tv_name"/>
 
     <TextView
-        android:id="@+id/textView4"
+        android:id="@+id/tv_mmora"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="24dp"
         android:text="我方出拳"
-        app:layout_constraintStart_toEndOf="@id/textView3"
-        app:layout_constraintTop_toTopOf="@id/textView3" />
+        app:layout_constraintStart_toEndOf="@+id/tv_winner"
+        app:layout_constraintTop_toTopOf="@+id/tv_winner"/>
 
     <TextView
-        android:id="@+id/textView5"
+        android:id="@+id/tv_cmora"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="24dp"
         android:text="電腦出拳"
-        app:layout_constraintStart_toEndOf="@id/textView4"
-        app:layout_constraintTop_toTopOf="@id/textView4" />
-
+        app:layout_constraintStart_toEndOf="@+id/tv_mmora"
+        app:layout_constraintTop_toTopOf="@+id/tv_mmora" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
